--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,17 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
+    "sourceMap": true,
+    "target": "es6",
     "module": "esnext",
-    "moduleResolution": "node",
+    "outDir": "dist",
+    "jsx": "react",
+    "moduleResolution": "Node",
+    "lib": ["esnext", "DOM"],
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "typeRoots": ["types", "node_modules/@types"],
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "esModuleInterop": true
   },
-  "include": [
-    "src"
-  ]
+  "exclude": ["./node_modules"]
 }
