--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bulma": "^1.0.0",
@@ -28,8 +26,9 @@
     "build": "webpack --mode production",
     "dev": "webpack serve --open --env MODE=development",
     "start": "webpack serve --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build:webpack": "webpack"
+    "test": "jest",
+    "build:webpack": "webpack",
+    "coverage": "jest --coverage"
   },
   "eslintConfig": {
     "extends": [
@@ -52,6 +51,9 @@
   "devDependencies": {
     "@babel/core": "^7.24.3",
     "@babel/preset-env": "^7.24.3",
+    "@babel/preset-typescript": "^7.24.1",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.2",
     "@types/nprogress": "^0.2.3",
@@ -67,14 +69,20 @@
     "css-loader": "^6.10.0",
     "dotenv": "^16.4.5",
     "dotenv-webpack": "^8.1.0",
+    "eslint-plugin-jest": "^27.9.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "prettier": "^3.2.5",
     "sass-loader": "^14.1.1",
     "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.4",
+    "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.3",
     "url-loader": "^4.1.1",
     "vm-browserify": "^1.1.2",
