--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,11 +57,11 @@ jobs:
       - name: SSH Deploy
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.HOST }} # Set your server's host
+          host: ${{ secrets.PUBLIC_DNS }} # Set your server's host
           username: ${{ secrets.USERNAME }} # Set your server's username
           key: ${{ secrets.SSH_PRIVATE_KEY }} # Set your SSH private key
           port: ${{ secrets.PORT }} # Set your server's SSH port
           script: |
-            cd /path/to/your/project
+            cd ~/client
             git pull origin main  # Pull the latest changes from your repository
             # Additional deployment steps or commands as needed
