--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,67 +1,33 @@
-# name: Deploy to EC2
-
-# on:
-#   push:
-#     branches: [main]
-
-# jobs:
-#   deploy:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - uses: actions/checkout@v3
-
-#       - name: Install SSH agent
-#         run: |
-#           echo "Adding SSH key..."
-#           mkdir -p ~/.ssh
-#           chmod 700 ~/.ssh
-#           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-#           chmod 600 ~/.ssh/id_rsa
-#           echo "SSH key added!"
-
-#       - name: Use a known SSH host
-#         run: |
-#           ssh-keyscan -T 10 ec2:10.1.20.58 >> ~/.ssh/known_hosts
-
-#       - name: Install dependencies
-#         run: |
-#           ssh -o StrictHostKeyChecking=no ubuntu@10.1.20.58 "sudo yum install -y gcc make gcc-c++ libcurl openssl openssl-devel perl perl-devel git"  # Install dependencies on EC2
-
-#       - name: Build React App
-#         run: npm ci
-#           npm run build
-
-#       - name: Deploy to EC2
-#         run: |
-#           scp -r build/* ubuntu@10.1.20.58:/var/www/html/  # Upload build files
-#           ssh -o StrictHostKeyChecking=no ubuntu@10.1.20.58 "sudo systemctl restart nginx"  # Restart web server
-
-# env:
-#   SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }} # Reference to secret containing private key
 name: Deployment
 
 on:
   push:
-    branches:
-      - main # Adjust branch name as needed
+    branches: ["main"]
 
 jobs:
-  deploy:
+  client-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: SSH Deploy
-        uses: appleboy/ssh-action@master
+      - uses: actions/checkout@v3
+      - name: Use Node.js 20.x
+        uses: actions/setup-node@v3
         with:
-          host: ${{ secrets.PUBLIC_DNS }} # Set your server's host
-          username: ${{ secrets.USERNAME }} # Set your server's username
-          key: ${{ secrets.SSH_PRIVATE_KEY }} # Set your SSH private key
-          port: ${{ secrets.PORT }} # Set your server's SSH port
-          script: |
-            cd ~/client
-            git pull origin main  # Pull the latest changes from your repository
-            # Additional deployment steps or commands as needed
+          node-version: 20
+      - name: Run Build
+        run: |
+          npm install
+          if [ ! -d "./build" ]; then
+              CI=false npm run build
+          fi
+        working-directory: ./
+
+      - name: copy build files view ssh password
+        uses: appleboy/scp-action@master
+        with:
+          host: ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com
+          username: ec2-user
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "build/*"
+          target: "~/"
+          strip_components: 2
