--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,5 +29,5 @@ jobs:
           username: ec2-user
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "build/*"
-          target: "/home/ec2-user/"
+          target: "/home/ec2-user/build"
           strip_components: 2
