--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
           fi
         working-directory: ./
 
-      - name: copy build files view ssh password
+      - name: Copy build files via SSH
         uses: appleboy/scp-action@master
         with:
           host: ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com
@@ -31,3 +31,7 @@ jobs:
           source: "build/*"
           target: "/home/ec2-user/build"
           strip_components: 2
+
+      - name: Check EC2 Instance Directory
+        run: |
+          ssh -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com ls -al /home/ec2-user/build
