--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
           host: ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com
           username: ec2-user
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "build/*"
+          source: "client/build/*"
           target: "/home/ec2-user/build"
           strip_components: 2
 
