--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,14 +22,23 @@ jobs:
           fi
         working-directory: ./
 
+      - name: Check if build directory is empty
+        run: |
+          if [ "$(ls -A build)" ]; then
+            echo "Build directory is not empty"
+          else
+            echo "Build directory is empty. Exiting deployment."
+            exit 1
+          fi
+
       - name: Copy build files via SSH
         uses: appleboy/scp-action@master
         with:
           host: ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com
           username: ec2-user
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "client/build/*"
-          target: "/home/ec2-user/build"
+          source: "build/*"
+          target: "/home/ec2-user/build/"
           strip_components: 2
 
     #   - name: Check EC2 Instance Directory
