--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
           fi
 
       - name: Copy build files via SSH
-        uses: appleboy/scp-action@master
+        uses: appleboy/ssh-action@v2
         with:
           host: ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com
           username: ec2-user
