--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,10 +37,13 @@ jobs:
           host: ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com
           username: ec2-user
           key: ${{ secrets.SSH_PRIVATE_PEM_KEY }}
-          source: "build/*"
-          target: "/home/ec2-user/build"
-          strip_components: 2
+          port: 22
+          script: |
+            mkdir -p /home/ec2-user/build
+            cd /home/ec2-user/build
+            rm -rf *
+            scp -i ${{ secrets.SSH_PRIVATE_PEM_KEY }} -r ${GITHUB_WORKSPACE}/build/* ec2-user@ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com:/home/ec2-user/build
 
       - name: Check EC2 Instance Directory
         run: |
-          ssh -i ${{ secrets.SSH_PRIVATE_PEM_KEY }} ec2-user@ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com ls -al /home/ec2-user/build
+          scp -i ${{ secrets.SSH_PRIVATE_PEM_KEY }} ec2-user@ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com ls -al /home/ec2-user/build
