--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,8 +42,8 @@ jobs:
             mkdir -p /home/ec2-user/build
             cd /home/ec2-user/build
             rm -rf *
-            scp -i ${{ secrets.SSH_PRIVATE_PEM_KEY }} -r ${GITHUB_WORKSPACE}/build/* ec2-user@ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com:/home/ec2-user/build
+            ssh -i ${{ secrets.SSH_PRIVATE_PEM_KEY }} -r ${GITHUB_WORKSPACE}/build/* ec2-user@ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com:/home/ec2-user/build
 
       - name: Check EC2 Instance Directory
         run: |
-          scp -i ${{ secrets.SSH_PRIVATE_PEM_KEY }} ec2-user@ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com ls -al /home/ec2-user/build
+          ssh -i ${{ secrets.SSH_PRIVATE_PEM_KEY }} ec2-user@ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com ls -al /home/ec2-user/build
