--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,10 +18,8 @@ jobs:
         run: |
           npm install
           if [ ! -d "./build" ]; then
-              CI=false npm run build
+            CI=false npm run build
           fi
-        working-directory: ./
-
       - name: Check if build directory is empty
         run: |
           if [ "$(ls -A build)" ]; then
@@ -32,18 +30,17 @@ jobs:
           fi
 
       - name: Copy build files via SSH
-        uses: appleboy/ssh-action@v1.0.3
+        uses: appleboy/ssh-action@master # Consider a more recent version
         with:
           host: ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com
           username: ec2-user
           key: ${{ secrets.SSH_PRIVATE_PEM_KEY }}
-          port: 22
+          port: 22 # Optional if using default port
           script: |
             mkdir -p /home/ec2-user/build
-            cd /home/ec2-user/build
-            rm -rf *
-            ssh -i ${{ secrets.SSH_PRIVATE_PEM_KEY }} -r ${GITHUB_WORKSPACE}/build/* ec2-user@ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com:/home/ec2-user/build
+            rsync -avz --delete ${GITHUB_WORKSPACE}/build/ /home/ec2-user/build/
+            # Use rsync for efficient transfer and overwrite handling
 
-      - name: Check EC2 Instance Directory
+      - name: Check EC2 Instance Directory (optional)
         run: |
           ssh -i ${{ secrets.SSH_PRIVATE_PEM_KEY }} ec2-user@ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com ls -al /home/ec2-user/build
