--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
           fi
 
       - name: Copy build files view SSH
-        uses: appleboy/scp-action@master
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com
           username: ec2-user
