--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,9 +35,9 @@ jobs:
           host: ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com
           username: ec2-user
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "build/*"
-          target: "/home/ec2-user/build/"
+          port: 22
           strip_components: 2
+          script: whoami
     #   - name: Copy build files via SSH
     #     uses: appleboy/ssh-action@master # Consider a more recent version
     #     with:
