--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,18 +40,4 @@ jobs:
           script: |
             whoami
             ls -al
-    #   - name: Copy build files via SSH
-    #     uses: appleboy/ssh-action@master # Consider a more recent version
-    #     with:
-    #       host: ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com
-    #       username: ec2-user
-    #       key: ${{ secrets.SSH_PRIVATE_PEM_KEY }}
-    #       port: 22 # Optional if using default port
-    #       script: |
-    #         mkdir -p /home/ec2-user/build
-    #         rsync -avz --delete ${GITHUB_WORKSPACE}/build/ /home/ec2-user/build/
-    #         # Use rsync for efficient transfer and overwrite handling
-
-    #   - name: Check EC2 Instance Directory (optional)
-    #     run: |
-    #       ssh -i ${{ secrets.SSH_PRIVATE_PEM_KEY }} ec2-user@ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com ls -al /home/ec2-user/build
+            rsync -avz --delete ${GITHUB_WORKSPACE}/build/ /home/ec2-user/build/
