--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,4 +40,4 @@ jobs:
           script: |
             whoami
             ls -al
-            scp -i ${{ secrets.SSH_PRIVATE_KEY }} ${GITHUB_WORKSPACE}/build/ ec2-user@ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com:/home/ec2-user/build/
+            scp -r -i ${{ secrets.SSH_PRIVATE_KEY }} ${GITHUB_WORKSPACE}/build/ ec2-user@ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com:/home/ec2-user/build
