--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,4 +40,5 @@ jobs:
           script: |
             whoami
             ls -al
+            ls -A build
             scp -r -i ${{ secrets.SSH_PRIVATE_KEY }} build/* ec2-user@ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com:~/build
