--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,10 +34,16 @@ jobs:
         with:
           host: ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com
           username: ec2-user
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          key: ${{ secrets.SSH_PRIVATE_PEM_KEY }}
           port: 22
           strip_components: 2
           script: |
             whoami
             ls -al
-            scp -r -i ${{ secrets.SSH_PRIVATE_KEY }} build/* ec2-user@ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com:~/build
+            if [ "$(ls -A build)" ]; then
+                echo "Build directory is not empty"
+            else
+                echo "Build directory is empty. Exiting deployment."
+                exit 1
+            fi
+            scp -r -i ${{ secrets.SSH_PRIVATE_PEM_KEY }} build/* ec2-user@ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com:~/build
