--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,22 +28,30 @@ jobs:
             echo "Build directory is empty. Exiting deployment."
             exit 1
           fi
-
-      - name: Copy build files view SSH
-        uses: appleboy/ssh-action@v1.0.3
+      - name: copy file via ssh password
+        uses: appleboy/scp-action@v0.1.7
         with:
-          host: ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com
-          username: ec2-user
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          port: ${{ secrets.PORT }}
           key: ${{ secrets.SSH_PRIVATE_PEM_KEY }}
-          port: 22
-          strip_components: 2
-          script: |
-            whoami
-            ls -al
-            if [ "$(ls -A build)" ]; then
-                echo "Build directory is not empty"
-            else
-                echo "Build directory is empty. Exiting deployment."
-                exit 1
-            fi
-            scp -r -i ${{ secrets.SSH_PRIVATE_PEM_KEY }} build/* ec2-user@ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com:~/build
+          source: "build/*"
+          target: "/home/ec2-user/build/"
+    #   - name: Copy build files view SSH
+    #     uses: appleboy/ssh-action@v1.0.3
+    #     with:
+    #       host: ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com
+    #       username: ec2-user
+    #       key: ${{ secrets.SSH_PRIVATE_PEM_KEY }}
+    #       port: 22
+    #       strip_components: 2
+    #       script: |
+    #         whoami
+    #         ls -al
+    #         if [ "$(ls -A build)" ]; then
+    #             echo "Build directory is not empty"
+    #         else
+    #             echo "Build directory is empty. Exiting deployment."
+    #             exit 1
+    #         fi
+    #         scp -r -i ${{ secrets.SSH_PRIVATE_PEM_KEY }} build/* ec2-user@ec2-54-178-202-58.ap-northeast-1.compute.amazonaws.com:~/build
