--- a/.env
+++ b/.env
@@ -1,2 +1,11 @@
-REACT_APP_API_URL=http://localhost:8000
-NODE_ENV=development
+# Django settings
+SECRET_KEY=your-secret-key
+DEBUG=True
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+
+# MySQL settings
+MYSQL_HOSTNAME=kanribusystem-develop-db02.c7rjovdkzy1g.ap-northeast-1.rds.amazonaws.com
+MYSQL_ROOT_PASSWORD=
+MYSQL_DATABASE=bms
+MYSQL_USER=admin
+MYSQL_PASSWORD=LHNRKWpvHrBHkmj6XO05
