--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bulma": "^1.0.0",
+    "chart.js": "^4.4.2",
     "jwt-decode": "^4.0.0",
     "nprogress": "^0.2.0",
     "process": "^0.11.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-icons": "^5.0.1",
