--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,14 @@
     "axios": "^1.6.8",
     "bulma": "^1.0.0",
     "chart.js": "^4.4.2",
+    "date-fns": "^3.6.0",
     "jwt-decode": "^4.0.0",
     "nprogress": "^0.2.0",
     "process": "^0.11.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-icons": "^5.0.1",
