--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -13,5 +13,6 @@
     "resolveJsonModule": true,
     "esModuleInterop": true
   },
-  "exclude": ["./node_modules"]
+  "exclude": ["./node_modules"],
+  "proxy": "http://127.0.0.1:8000"
 }
