--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.49.1",
     "axios": "^1.6.8",
     "bulma": "^1.0.0",
     "chart.js": "^4.4.2",
@@ -13,6 +14,7 @@
     "process": "^0.11.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
