--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,9 @@ jobs:
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
           key: ${{ secrets.SSH_PRIVATE_PEM_KEY }}
-          script: rsync -av --delete client/build/ /usr/share/nginx/html/
+          script: |
+            rsync -av --delete /usr/share/nginx/html/client/build/ /usr/share/nginx/html/
+            rm -rf /usr/share/nginx/html/client/
       - name: Restart Nginx service
         uses: appleboy/ssh-action@v0.1.7
         with:
@@ -53,6 +55,4 @@ jobs:
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
           key: ${{ secrets.SSH_PRIVATE_PEM_KEY }}
-          script: |
-            rsync -av --delete /usr/share/nginx/html/client/build/ /usr/share/nginx/html/
-            rm -rf /usr/share/nginx/html/client/
+          script: sudo systemctl restart nginx
