--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,10 +10,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js 20.x
+      - name: Use Node.js 18.17.1
         uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: 18.17.1
       - name: Run Build
         run: |
           cd ./client
